<resources>
    <string name="app_name">Prover MVP</string>
    <string name="action_settings">Settings</string>

    <!-- permissions -->
    <string name="permissionRequired">Permissions required</string>
    <string name="writePermissionRequired">File write permissions are required to write file</string>
    <string name="readPermissionRequired">File read permissions are required to read file</string>
    <string name="cantFindApp">Cant find app to open file</string>
    <string name="camera_error">Camera error</string>
    <string name="info">Info</string>
    <string name="addressCopied">Address copied to clipboard</string>
    <string name="address_">Wallet address:</string>
    <string name="offline">Offline</string>
    <string name="makeProver">Do not interrupt video recording, make a circular motion with the phone</string>
    <string name="swypeCodeFailedTryAgain">Something went wrong. Please, try again.</string>
    <string name="accountInfoMessage">IMPORTANT: DO NOT SEND TOKENS TO THIS ADDRESS!\n\nSend only Ropsten Testnet ether to this deposit address. Sending tokens or any other currency, including Mainnet ether, to this address will result in the permanent loss of your deposit.</string>
    <string name="walletAddress">Wallet address</string>
    <string name="swypeCodeOk">Swype code entered succesfully.</string>
    <string name="calculatingVideoHash">Calculating video hash.</string>
    <string name="videoHashPosted">Video hash posted to blockchain.</string>
    <string name="videoHashPostFailed">Error sending video hash to blockchain.</string>
    <string name="notEnoughMoney">Not enough funds on your account.</string>
    <string name="videoNotConfirmed">Your video has not been verified yet!</string>

    <string name="import_">Import</string>
    <string name="export">Export</string>
    <string name="password">Password</string>
    <string name="exportWallet">Export wallet</string>
    <string name="importWallet">Import wallet</string>
    <string name="fileNotExist">File does not exist</string>
    <string name="keystore_json_file">Keystore / JSON File</string>
    <string name="open">Open</string>
</resources>
